--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,13 @@
 ---
+declared-services:
+  my-nlu-service:
+    label: natural-language-understanding
+    plan: standard
+
 applications:
 - name: natural-language-understanding-demo
   path: .
   command: npm start
   memory: 512M
+  services:
+  - my-nlu-service
