--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,7 @@ declared-services:
 applications:
 - name: natural-language-understanding-demo
   path: .
+  buildpack: sdk-for-nodejs
   command: npm start
   memory: 512M
   services:
