--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
-    "cf-deployment-tracker-client": "0.1.2",
+    "cf-deployment-tracker-client": "^0.x",
     "css-math": "^0.3.1",
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
