--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "engines": {
     "node": ">=6.0",
-    "npm": ">=3.0"
+    "npm": ">=4.0"
   },
   "author": "IBM Corp.",
   "babel": {
@@ -35,48 +35,50 @@
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
-    "aphrodite": "^1.1.0",
+    "aphrodite": "^1.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "body-parser": "^1.16.0",
-    "cf-deployment-tracker-client": "^0.x",
-    "css-math": "^0.3.1",
+    "body-parser": "^1.17.2",
+    "cf-deployment-tracker-client": "^0.1.3",
+    "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
-    "express": "~4.14.0",
+    "express": "~4.15.3",
     "express-browserify": "^1.0.2",
-    "express-rate-limit": "^2.6.0",
+    "express-rate-limit": "^2.8.0",
     "express-react-views": "^0.10.2",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.4.0",
-    "html-to-react": "^1.2.2",
+    "helmet": "^3.6.1",
+    "html-to-react": "^1.2.11",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
-    "numeral": "^2.0.4",
-    "raf": "^3.3.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-waypoint": "^5.1.0",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.5.10",
+    "raf": "^3.3.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-waypoint": "^7.0.4",
     "scroll-to-element": "^2.0.0",
     "tween": "^0.9.0",
-    "uglifyify": "^3.0.4",
+    "uglifyify": "^4.0.2",
+    "valid-url": "^1.0.9",
     "watson-developer-cloud": "^2.25.1",
-    "watson-react-components": "^0.5.9",
+    "watson-react-components": "^0.6.9",
     "watson-ui-components": "^0.6.0",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
-    "casperjs": "^1.1.3",
-    "codecov": "^1.0.1",
-    "eslint": "^3.16.1",
-    "eslint-plugin-react": "^6.9.0",
+    "casperjs": "^1.1.4",
+    "codecov": "^2.2.0",
+    "eslint": "^4.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "nock": "^9.0.2",
+    "mocha": "^3.4.2",
+    "nock": "^9.0.13",
     "phantomjs-prebuilt": "^2.1.14",
-    "supertest": "^2.0.1"
+    "supertest": "^3.0.0"
   }
 }
