--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,30 +1,11 @@
+extends: airbnb
 env:
   browser: true
-  es6: true
   node: true
   mocha: true
-extends:
-  - 'eslint:recommended'
-  - 'plugin:react/recommended'
-parserOptions:
-  ecmaFeatures:
-    experimentalObjectRestSpread: true
-    jsx: true
-  sourceType: module
-plugins:
-  - react
 rules:
-  indent:
-    - error
-    - 2
-  linebreak-style:
-    - error
-    - unix
-  quotes:
-    - error
-    - single
-  semi:
-    - error
-    - always
-  no-console:
-    - warn
+  global-require: 0
+  react/no-array-index-key: 1
+  import/extensions: 0
+  react/no-multi-comp: 0
+  react/forbid-prop-types: 1
