--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
-    "aphrodite": "^1.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
+    "aphrodite": "^1.2.3",
+    "babel-eslint": "^7.2.3",
+    "babel-register": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -46,13 +48,15 @@
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
-    "express": "~4.15.3",
+    "es6-promise": "^4.1.1",
+    "express": "~4.15.4",
     "express-browserify": "^1.0.2",
-    "express-rate-limit": "^2.8.0",
+    "express-rate-limit": "^2.9.0",
     "express-react-views": "^0.10.2",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.6.1",
+    "helmet": "^3.8.1",
     "html-to-react": "^1.2.11",
+    "isomorphic-fetch": "^2.2.1",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
     "numeral": "^2.0.6",
@@ -63,22 +67,25 @@
     "react-waypoint": "^7.0.4",
     "scroll-to-element": "^2.0.0",
     "tween": "^0.9.0",
-    "uglifyify": "^4.0.2",
+    "uglifyify": "^4.0.3",
     "valid-url": "^1.0.9",
-    "watson-developer-cloud": "^2.25.1",
-    "watson-react-components": "^0.6.9",
+    "watson-developer-cloud": "^2.39.0",
+    "watson-react-components": "^0.6.10",
     "watson-ui-components": "^0.6.0",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^2.2.0",
-    "eslint": "^4.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "codecov": "^2.3.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.4.2",
-    "nock": "^9.0.13",
-    "phantomjs-prebuilt": "^2.1.14",
+    "mocha": "^3.5.0",
+    "nock": "^9.0.14",
+    "phantomjs-prebuilt": "^2.1.15",
     "supertest": "^3.0.0"
   }
 }
