--- a/package.json
+++ b/package.json
@@ -35,57 +35,57 @@
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
-    "aphrodite": "^1.2.3",
+    "aphrodite": "^1.2.5",
     "babel-eslint": "^7.2.3",
-    "babel-register": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "babelify": "^7.3.0",
-    "body-parser": "^1.17.2",
-    "cf-deployment-tracker-client": "^0.1.3",
+    "body-parser": "^1.18.2",
+    "cf-deployment-tracker-client": "^0.1.4",
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
-    "es6-promise": "^4.1.1",
-    "express": "~4.15.4",
+    "es6-promise": "^4.2.2",
+    "express": "^4.15.5",
     "express-browserify": "^1.0.2",
-    "express-rate-limit": "^2.9.0",
-    "express-react-views": "^0.10.2",
+    "express-rate-limit": "^2.11.0",
+    "express-react-views": "^0.10.5",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.8.1",
-    "html-to-react": "^1.2.11",
+    "helmet": "^3.9.0",
+    "html-to-react": "^1.3.3",
     "isomorphic-fetch": "^2.2.1",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
     "numeral": "^2.0.6",
-    "prop-types": "^15.5.10",
-    "raf": "^3.3.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-waypoint": "^7.0.4",
+    "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-waypoint": "^7.3.4",
     "scroll-to-element": "^2.0.0",
     "tween": "^0.9.0",
-    "uglifyify": "^4.0.3",
+    "uglifyify": "^4.0.5",
     "valid-url": "^1.0.9",
-    "watson-developer-cloud": "^2.39.0",
-    "watson-react-components": "^0.6.10",
+    "watson-developer-cloud": "^2.42.0",
+    "watson-react-components": "^0.6.16",
     "watson-ui-components": "^0.6.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^2.3.0",
-    "eslint": "^4.5.0",
+    "codecov": "^2.3.1",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.5.1",
     "istanbul": "^0.4.5",
-    "mocha": "^3.5.0",
-    "nock": "^9.0.14",
-    "phantomjs-prebuilt": "^2.1.15",
+    "mocha": "^3.5.3",
+    "nock": "^9.1.6",
+    "phantomjs-prebuilt": "^2.1.16",
     "supertest": "^3.0.0"
   }
 }
