--- a/package.json
+++ b/package.json
@@ -29,25 +29,24 @@
     "test-integration": "casperjs test ./test/integration/test.*.js",
     "test-integration-runner": "NODE_ENV=test node casper-runner.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration-runner",
-    "test-unit": "istanbul cover ./node_modules/mocha/bin/_mocha test/unit",
+    "test-unit": "mocha test/unit --exit",
     "lint": "eslint .",
     "autofix": "eslint --fix .",
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
     "aphrodite": "^1.2.5",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "babelify": "^7.3.0",
-    "body-parser": "^1.18.2",
-    "cf-deployment-tracker-client": "^0.1.4",
+    "babelify": "^8.0.0",
+    "body-parser": "^1.18.3",
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.1",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "express-browserify": "^1.0.2",
@@ -67,25 +66,25 @@
     "react-waypoint": "^7.3.4",
     "scroll-to-element": "^2.0.0",
     "tween": "^0.9.0",
-    "uglifyify": "^4.0.5",
+    "uglifyify": "^5.0.0",
     "valid-url": "^1.0.9",
     "watson-developer-cloud": "^3.4.1",
     "watson-react-components": "^0.6.16",
-    "watson-ui-components": "^0.6.0",
+    "watson-ui-components": "^0.6.1",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^2.3.1",
+    "codecov": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.7.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.3",
+    "jest": "^22.4.3",
+    "mocha": "^5.1.1",
     "nock": "^9.2.5",
     "phantomjs-prebuilt": "^2.1.16",
-    "supertest": "^3.0.0"
+    "supertest": "^3.1.0"
   }
 }
