--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.5",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -68,7 +69,7 @@
     "tween": "^0.9.0",
     "uglifyify": "^5.0.0",
     "valid-url": "^1.0.9",
-    "watson-developer-cloud": "^3.4.1",
+    "watson-developer-cloud": "^3.4.2",
     "watson-react-components": "^0.6.16",
     "watson-ui-components": "^0.6.1",
     "whatwg-fetch": "^2.0.4"
@@ -78,11 +79,11 @@
     "codecov": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3",
-    "mocha": "^5.1.1",
+    "jest": "^22.4.4",
+    "mocha": "^5.2.0",
     "nock": "^9.2.5",
     "phantomjs-prebuilt": "^2.1.16",
     "supertest": "^3.1.0"
