feat: Add semantic releases and IAM support

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=<username>
-NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD=<password>
+
+# Environment variables
+CLASSIFIER_ID=
+NATURAL_LANGUAGE_UNDERSTANDING_URL=https://gateway.watsonplatform.net/natural-language-understanding/api
+# You need to provide either username and password
+NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=
+NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD=
+# OR IAM API key and URL
+NATURAL_LANGUAGE_UNDERSTANDING_IAM_APIKEY=
+NATURAL_LANGUAGE_UNDERSTANDING_IAM_URL=
