--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "natural-language-understanding-nodejs",
+  "name": "@ibm-watson/natural-language-understanding-nodejs",
   "version": "0.0.1",
-  "description": "A sample Node.js app for Bluemix that use the IBM Watson Natural Language Understanding service",
+  "description": "A sample Node.js app for IBM Cloud that use the IBM Watson Natural Language Understanding service",
   "repository": {
     "type": "git",
     "url": "https://github.com/watson-developer-cloud/natural-language-understanding-nodejs.git"
   },
   "engines": {
-    "node": ">=6.0",
-    "npm": ">=4.0"
+    "node": ">=8.0"
   },
   "author": "IBM Corp.",
   "babel": {
@@ -37,7 +36,7 @@
   "dependencies": {
     "aphrodite": "^1.2.5",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -47,45 +46,49 @@
     "body-parser": "^1.18.3",
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "express-browserify": "^1.0.2",
     "express-rate-limit": "^2.11.0",
     "express-react-views": "^0.10.5",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.12.0",
+    "helmet": "^3.12.1",
     "html-to-react": "^1.3.3",
     "isomorphic-fetch": "^2.2.1",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
     "numeral": "^2.0.6",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "raf": "^3.4.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-waypoint": "^7.3.4",
+    "react-waypoint": "^8.0.3",
     "scroll-to-element": "^2.0.0",
     "tween": "^0.9.0",
-    "uglifyify": "^5.0.0",
+    "uglifyify": "^5.0.1",
     "valid-url": "^1.0.9",
-    "watson-developer-cloud": "^3.4.2",
+    "watson-developer-cloud": "^3.7.0",
     "watson-react-components": "^0.6.16",
     "watson-ui-components": "^0.6.1",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^3.0.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.4",
+    "codecov": "^3.0.4",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "jest": "^23.4.1",
     "mocha": "^5.2.0",
-    "nock": "^9.2.5",
+    "nock": "^9.4.2",
     "phantomjs-prebuilt": "^2.1.16",
     "supertest": "^3.1.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
