chore: Update dependencies

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,5 @@ NATURAL_LANGUAGE_UNDERSTANDING_URL=https://gateway.watsonplatform.net/natural-la
 # You need to provide either username and password
 NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=
 NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD=
-# OR IAM API key and URL
+# OR IAM API key
 NATURAL_LANGUAGE_UNDERSTANDING_IAM_APIKEY=
-NATURAL_LANGUAGE_UNDERSTANDING_IAM_URL=
