--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       [
         "@babel/preset-env",
         {
-          "useBuiltIns": "entry"
+          "useBuiltIns": "entry",
+          "corejs": "3.0"
         }
       ],
       "@babel/preset-react"
@@ -36,25 +37,27 @@
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "aphrodite": "^1.2.5",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babelify": "^10.0.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
+    "core-js": "^3.1.4",
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
     "dotenv": "^6.2.0",
-    "es6-promise": "^4.2.6",
-    "express": "^4.16.4",
+    "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
     "express-browserify": "^1.0.3",
-    "express-rate-limit": "^3.4.0",
+    "express-rate-limit": "^3.5.3",
     "express-react-views": "^0.11.0",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.16.0",
+    "helmet": "^3.19.0",
     "html-to-react": "^1.3.4",
+    "ibm-watson": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
@@ -68,20 +71,19 @@
     "tween": "^0.9.0",
     "uglifyify": "^5.0.1",
     "valid-url": "^1.0.9",
-    "watson-developer-cloud": "^3.18.1",
     "watson-react-components": "^0.6.19",
     "watson-ui-components": "^0.6.2",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^3.2.0",
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.4.0",
+    "codecov": "^3.5.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
     "mocha": "^5.2.0",
     "nock": "^10.0.6",
     "phantomjs-prebuilt": "^2.1.16",
