--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,17 @@
-extends: airbnb
 env:
   browser: true
+  es6: true
   node: true
   mocha: true
-rules:
-  global-require: 0
-  react/no-array-index-key: 1
-  import/extensions: 0
-  react/no-multi-comp: 0
-  react/forbid-prop-types: 1
+extends: 'eslint:recommended'
+globals:
+  Atomics: readonly
+  SharedArrayBuffer: readonly
+parserOptions:
+  ecmaFeatures:
+    jsx: true
+  ecmaVersion: 2018
+  sourceType: module
+plugins:
+  - react
+rules: {}
