--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/watson-developer-cloud/natural-language-understanding-nodejs.git"
   },
   "engines": {
-    "node": ">=8.0"
+    "node": ">=12"
   },
   "author": "IBM Corp.",
   "babel": {
@@ -32,32 +32,32 @@
     "test-integration-runner": "NODE_ENV=test node casper-runner.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration-runner",
     "test-unit": "mocha test/unit --exit",
-    "lint": "eslint .",
-    "autofix": "eslint --fix .",
+    "lint": "npx eslint .",
+    "autofix": "npx eslint --fix .",
     "codecov": "npm run test && (codecov || true)"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.5.5",
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/register": "^7.7.0",
     "aphrodite": "^1.2.5",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babelify": "^10.0.0",
     "body-parser": "^1.19.0",
-    "core-js": "^3.1.4",
+    "core-js": "^3.4.0",
     "css-math": "^0.4.0",
     "deep-assign": "^2.0.0",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "express-browserify": "^1.0.3",
-    "express-rate-limit": "^3.5.3",
+    "express-rate-limit": "^5.0.0",
     "express-react-views": "^0.11.0",
     "express-secure-only": "^0.2.1",
-    "helmet": "^3.19.0",
-    "html-to-react": "^1.3.4",
-    "ibm-watson": "^4.2.5",
+    "helmet": "^3.21.2",
+    "html-to-react": "^1.4.2",
+    "ibm-watson": "^5.1.0",
     "isomorphic-fetch": "^2.2.1",
     "language-list": "0.0.3",
     "map-range": "^0.1.2",
@@ -69,7 +69,7 @@
     "react-waypoint": "^8.1.0",
     "scroll-to-element": "^2.0.3",
     "tween": "^0.9.0",
-    "uglifyify": "^5.0.1",
+    "uglifyify": "^5.0.2",
     "valid-url": "^1.0.9",
     "watson-react-components": "^0.6.19",
     "watson-ui-components": "^0.6.2",
@@ -77,17 +77,17 @@
   },
   "devDependencies": {
     "casperjs": "^1.1.4",
-    "codecov": "^3.5.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.1",
+    "codecov": "^3.6.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^24.8.0",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.6",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
+    "mocha": "^6.2.2",
+    "nock": "^11.7.0",
     "phantomjs-prebuilt": "^2.1.16",
-    "supertest": "^3.4.2"
+    "supertest": "^4.0.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
