fix(manifest): update deprecated buildpack option to buildpacks

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 applications:
 - name: natural-language-understanding-demo
   path: .
-  buildpack: sdk-for-nodejs
+  buildpacks: 
+    - nodejs_buildpack
   command: npm start
   memory: 512M
